# host-sink

./: README.md  default.nix  hlint.yaml  host-sink.cabal  shell.nix
src/main/haskell/: HostSink.hs
src/main/haskell/HostSink/: CLI.hs  Config.hs  Fetcher.hs  Format.hs  Parse.hs
